#4874 Tidy code